--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
     </head>
     <body>
         <div class="headers">
-        <p class="top-title">o b s c u r e h a c k a t h o n p r o j e c t</p>
+        <p class="top-title">the real life banking game</p>
 
         <p class="quote">Powered by Capital One - Inspired by SQL Sentry - Supported by Microsoft Azure</p>
             </div>
