--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@
                       </td>
                   </tr>
 
-                <button class="btn btn-primary btn-sm pull-right" name="submit" onclick="postStuff()">
+                <a href="/ui/templates/index.html" class="btn btn-primary btn-sm pull-right" name="submit" onclick="postStuff()">
                   Authorize
                 </button>
       </form>
